--- a/gtk/gtk-3.24/_common.scss
+++ b/gtk/gtk-3.24/_common.scss
@@ -108,6 +108,7 @@ $_switch_margin: if($_sizevariant== "default", 10px, 7px);
 
 .view,
 %view {
+  @include with-font(1.3);
   color: $text_color;
   caret-color: $caret_color;
   background-color: $base_color;
@@ -206,6 +207,7 @@ flowbox {
 }
 
 label {
+  @include with-font(1.3);
   caret-color: currentColor; // this shouldn't be needed.
 
   &.separator {
@@ -378,6 +380,7 @@ spinner {
 entry {
   %entry_basic,
   & {
+    @include with-font(1.3);
     min-height: $_entry_height;
     padding-left: 8px;
     padding-right: 8px;
@@ -1819,6 +1822,8 @@ spinbutton {
  * ComboBoxes *
  **************/
 combobox {
+  @include with-font(1.3);
+
   arrow {
     -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
     min-height: 16px;
@@ -4913,6 +4918,7 @@ expander {
  * Calendar *
  ***********/
 calendar {
+  @include with-font(1.6);
   color: $text_color;
   border: 1px solid $borders_color;
 
@@ -5880,7 +5886,7 @@ headerbar.selection-mode button.titlebutton,
 }
 
 .monospace {
-  font-family: monospace;
+  @include with-font();
 }
 
 /**********************
