refactor(theme): rename theme.alert to theme.error

--- a/gtk/gtk-3.24/_colors.scss
+++ b/gtk/gtk-3.24/_colors.scss
@@ -25,9 +25,9 @@ $scrollbar_slider_hover_color: mix($fg_color, $bg_color, 80%);
 $scrollbar_slider_active_color: lighten($selected_bg_color, 10%);
 
 $warning_color: {{ theme.warn }};
-$error_color: {{ theme.alert }};
+$error_color: {{ theme.error }};
 $success_color: {{ theme.info }};
-$destructive_color: {{ theme.alert }};
+$destructive_color: {{ theme.error }};
 
 $osd_fg_color: {{ colors.foreground }};
 $osd_text_color: {{ colors.foreground }};
