fix(firefox): use proper background for stuff like elm inspector

--- a/modules/firefox/chrome/userChrome.css
+++ b/modules/firefox/chrome/userChrome.css
@@ -3,3 +3,7 @@
 #PersonalToolbar {
   background-color: var(--main-bg-color) !important;
 }
+
+.browserContainer {
+  background-color: white !important;
+}
