feat(nix): update inputs

--- a/home/modules/firefox/chrome/userChrome.css
+++ b/home/modules/firefox/chrome/userChrome.css
@@ -1,7 +1,8 @@
 .devtools-tabbar,
 #nav-bar,
-#PersonalToolbar {
-  background-color: var(--main-bg-color) !important;
+#PersonalToolbar,
+#TabsToolbar {
+  background-color: {{ colors.background_alt1 }} !important;
 }
 
 .browserContainer {
