fix(firefox): use generic variabile instead of theme variable so hotreload works

--- a/home/modules/firefox/chrome/userChrome.css
+++ b/home/modules/firefox/chrome/userChrome.css
@@ -2,7 +2,7 @@
 #nav-bar,
 #PersonalToolbar,
 #TabsToolbar {
-  background-color: {{ colors.background_alt1 }} !important;
+  background-color: var(--background-color-canvas) !important;
 }
 
 .browserContainer {
